--- a/app/src/main/res/layout/activity_control.xml
+++ b/app/src/main/res/layout/activity_control.xml
@@ -7,99 +7,194 @@
     android:layout_height="match_parent"
     tools:context=".Homepage.Control.ControlActivity">
 
-    <com.example.learningmachineparentsapp.View.TitleLayout
-        android:id="@+id/control_tit"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/control_pc"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/control_tit"/>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/control_net"
-        android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="10dp"
-        android:layout_below="@id/control_pc">
-        <LinearLayout
+        android:layout_height="match_parent">
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <LinearLayout
-                android:id="@+id/control_ll1"
+            android:layout_height="match_parent">
+            <com.example.learningmachineparentsapp.View.TitleLayout
+                android:id="@+id/control_tit"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:orientation="horizontal"
-                android:layout_marginTop="10dp"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
+                android:layout_height="wrap_content"/>
+            <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/control_pc"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/control_tit"/>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/control_net"
+                android:layout_width="match_parent"
+                android:layout_height="130dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="10dp"
                 android:layout_below="@id/control_pc">
-                <ImageView
-                    android:id="@+id/control_iv_clock"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"/>
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:layout_marginLeft="5dp"
-                    android:textSize="16sp"
-                    android:textColor="#404040"
-                    android:text="绿色上网时间"/>
-            </LinearLayout>
-            <LinearLayout
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:id="@+id/control_ll1"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="10dp"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
+                        android:layout_below="@id/control_pc">
+                        <ImageView
+                            android:id="@+id/control_iv_clock"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:layout_marginLeft="5dp"
+                            android:textSize="16sp"
+                            android:textColor="#404040"
+                            android:text="绿色上网时间"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="4"
+                            android:textSize="15sp"
+                            android:gravity="center_vertical"
+                            android:maxLines="2"
+                            android:text="控制孩子使用学习机的绿色联网时间，默认设置为每日不限制时间。"/>
+                        <com.xuexiang.xui.widget.button.switchbutton.SwitchButton
+                            android:id="@+id/control_sb_clock"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/control_ll_set_clock"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:textColor="#4D4D4D"
+                            android:textSize="14sp"
+                            android:text="设置时间："/>
+                        <TextView
+                            android:id="@+id/control_tv_set_clock"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:textColor="#4D4D4D"
+                            android:textStyle="bold"
+                            android:textSize="14sp"
+                            android:text="2小时"/>
+                    </LinearLayout>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/control_tel"
+                android:layout_width="match_parent"
+                android:layout_height="130dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="10dp"
+                android:layout_below="@id/control_net">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:id="@+id/control_ll2"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="10dp"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
+                        android:layout_below="@id/control_pc">
+                        <ImageView
+                            android:id="@+id/control_iv_tel"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:layout_marginLeft="5dp"
+                            android:textSize="16sp"
+                            android:textColor="#404040"
+                            android:text="电话拨打时间"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="4"
+                            android:textSize="15sp"
+                            android:gravity="center_vertical"
+                            android:maxLines="2"
+                            android:text="控制孩子使用学习机的拨打电话时间，默认设置为每日不限制时间。"/>
+                        <com.xuexiang.xui.widget.button.switchbutton.SwitchButton
+                            android:id="@+id/control_sb_tel"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/control_ll_set_tel"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:textColor="#4D4D4D"
+                            android:textSize="14sp"
+                            android:text="设置时间："/>
+                        <TextView
+                            android:id="@+id/control_tv_set_tel"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:textColor="#4D4D4D"
+                            android:textStyle="bold"
+                            android:textSize="14sp"
+                            android:text="2小时"/>
+                    </LinearLayout>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <View
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:orientation="horizontal">
-
-            </LinearLayout>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/control_module"
-        android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="10dp"
-        android:layout_below="@id/control_net">
-        <LinearLayout
-            android:id="@+id/control_ll2"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:layout_below="@id/control_pc">
-            <ImageView
-                android:id="@+id/control_iv_mod"
-                android:layout_width="30dp"
-                android:layout_height="30dp"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:layout_marginLeft="5dp"
-                android:textSize="16sp"
-                android:textColor="#404040"
-                android:text="电话拨打时间"/>
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
+                android:layout_below="@id/control_tel"/>
+        </RelativeLayout>
+    </ScrollView>
     <Button
         android:id="@+id/control_btn_adapt"
         android:layout_width="match_parent"
