--- a/app/src/main/res/layout/item_gsyvideo.xml
+++ b/app/src/main/res/layout/item_gsyvideo.xml
@@ -18,7 +18,7 @@
         android:id="@+id/itemgsy_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@id/itemgsy_llauther"
         android:layout_alignParentRight="true"
         android:layout_marginRight="20dp"
         android:paddingTop="5dp"
@@ -105,6 +105,7 @@
 
     <!--左下角描述与作者-->
     <LinearLayout
+        android:id="@+id/itemgsy_llauther"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
