--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -65,8 +65,8 @@
 
     <!-- dialog的动画 -->
     <style name="main_menu_animStyle">
-        windowEnterAnimation 进入的动画
-        代码里面
+        <!--windowEnterAnimation 进入的动画
+        代码里面-->
         <item name="android:windowEnterAnimation">@anim/dialog_in_anim</item>
         <item name="android:windowExitAnimation">@anim/dialog_out_anim</item>
     </style>
