--- a/app/src/main/res/layout/activity_gsyvideo.xml
+++ b/app/src/main/res/layout/activity_gsyvideo.xml
@@ -7,6 +7,28 @@
     android:layout_height="match_parent"
     tools:context=".Circle.Video.GSYVideoActivity">
 
+
+    <LinearLayout
+        android:id="@+id/gsy_ll_upload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="10dp"
+        android:layout_gravity="center_horizontal">
+        <ImageView
+            android:id="@+id/gsy_iv_upload"
+            android:layout_width="40dp"
+            android:layout_height="40dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:layout_gravity="center_horizontal"
+            android:text="上传"/>
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/gsy_rv"
         android:layout_width="match_parent"
