--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,8 @@
     <color name="white_pressed">#CFCFCF</color>
 
     <color name="divider_color">#B7B2B2</color>
+
+    <color name="solar_background">#49DA9C</color>
+    <color name="line_color">#e7e7e7</color>
+    <color name="content_background">#f2f2f2</color>
 </resources>
